[gd_scene load_steps=12 format=3 uid="uid://catqqj250h78r"]

[ext_resource type="Script" uid="uid://do7on1mwnmx4l" path="res://projectile_enemy.gd" id="1_2skm1"]
[ext_resource type="Texture2D" uid="uid://qdlhioxxy4q3" path="res://Art/SH Frame 1.png" id="2_wk4il"]
[ext_resource type="Texture2D" uid="uid://cdfn6oys80jqf" path="res://Art/SH Frame 2_12.png" id="3_3v6uv"]
[ext_resource type="Texture2D" uid="uid://c3mdd0x3148a8" path="res://Art/SH Frame 3_11.png" id="4_lbkn5"]
[ext_resource type="Texture2D" uid="uid://dne1qy7tkpmiq" path="res://Art/SH Frame 4_10.png" id="5_b4qf0"]
[ext_resource type="Texture2D" uid="uid://dhdworwx26f7w" path="res://Art/SH Frame 5_9.png" id="6_xyhod"]
[ext_resource type="Texture2D" uid="uid://dm715h7tjrjtt" path="res://Art/SH Frame 6_8.png" id="7_ijis5"]
[ext_resource type="Texture2D" uid="uid://d3ybe5e4dgwng" path="res://Art/SH Frame 7.png" id="8_wb418"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ik78p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wk4il")
}, {
"duration": 1.0,
"texture": ExtResource("3_3v6uv")
}, {
"duration": 1.0,
"texture": ExtResource("4_lbkn5")
}, {
"duration": 1.0,
"texture": ExtResource("5_b4qf0")
}, {
"duration": 1.0,
"texture": ExtResource("6_xyhod")
}, {
"duration": 1.0,
"texture": ExtResource("7_ijis5")
}, {
"duration": 1.0,
"texture": ExtResource("8_wb418")
}, {
"duration": 1.0,
"texture": ExtResource("6_xyhod")
}, {
"duration": 1.0,
"texture": ExtResource("7_ijis5")
}, {
"duration": 1.0,
"texture": ExtResource("5_b4qf0")
}, {
"duration": 1.0,
"texture": ExtResource("4_lbkn5")
}, {
"duration": 1.0,
"texture": ExtResource("3_3v6uv")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yikbh"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_yikbh"]
radius = 85.02353

[node name="ProjectileEnemy" type="CharacterBody2D"]
script = ExtResource("1_2skm1")

[node name="ProjEnemySprite" type="AnimatedSprite2D" parent="."]
z_index = -1
sprite_frames = SubResource("SpriteFrames_ik78p")
animation = &"idle"
offset = Vector2(0, 50)

[node name="ProjEnemyBodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yikbh")

[node name="ProjEnemyArea" type="Area2D" parent="." groups=["enemy"]]

[node name="ProjEnemyHitbox" type="CollisionShape2D" parent="ProjEnemyArea"]
position = Vector2(0, 25)
shape = SubResource("CircleShape2D_yikbh")

[node name="ClippingCheck" type="Area2D" parent="." groups=["clippingcheck"]]

[node name="ProjEnemyBodyCollision" type="CollisionShape2D" parent="ClippingCheck"]
shape = SubResource("RectangleShape2D_yikbh")

[connection signal="area_entered" from="ClippingCheck" to="." method="_on_clipping_check_area_entered"]
